# udevil

.gear/: merge  rules
.gear/tags/: list
altlinux/: udevil.spec
etc/: Makefile.am  Makefile.in
etc/systemd/: devmon@.service
src/: Makefile.am  Makefile.in
